--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -9,3 +9,9 @@
     font-weight: bold;
     color: white;
 }
+
+.checkbox{
+    display: inline-block;
+    color: white;
+    margin-right: 1rem;
+}
